# projection_lidar_cam

./: CMakeLists.txt  calibration.txt
1/: calib.txt  convert.py  ply.py
2/: calib.txt
include/: dataloader.hpp
src/: projectOnImage.cpp
